user-management init

--- a/src/views/partials/admin/tab-user-management.ejs
+++ b/src/views/partials/admin/tab-user-management.ejs
@@ -1,3 +1,4 @@
 <div class="tab-pane" id="pane3">
-    <!-- Content for User Management tab goes here -->
+    <div class="admin-header">User management</div>
+    <%- include('user-management.ejs'); %>
 </div>
