--- a/src/views/partials/admin/content-header.ejs
+++ b/src/views/partials/admin/content-header.ejs
@@ -1,5 +1,7 @@
 <div class="content-header">
-    <div class="large-header"><!-- set applicatio/request name in js--></div>
+    <div class="large-header">
+        <!-- set application/request name in js-->
+    </div>
     <div class="action-buttons">
         <button class="approve-button">Approve</button>
         <button class="decline-button">Decline</button>
