--- a/src/views/partials/admin/tab-user-management.ejs
+++ b/src/views/partials/admin/tab-user-management.ejs
@@ -1,4 +1,9 @@
 <div class="tab-pane" id="pane3">
-    <div class="admin-header">User management</div>
+    <div class="admin-header-container">
+        <div class="admin-header">User management</div>
+        <div class="search-input-container">
+            <input type="text" class="search-input" id="user-management-search" placeholder="Search">
+        </div>
+    </div>
     <%- include('user-management.ejs'); %>
 </div>
