--- a/src/public/css/main.scss
+++ b/src/public/css/main.scss
@@ -10,6 +10,7 @@
 @import 'components/buttons';
 @import 'components/scrollbar';
 @import 'components/text';
+@import 'components/input';
 
 // Import page-specific styles
 @import 'pages/login';
