--- a/src/public/css/pages/_admin.scss
+++ b/src/public/css/pages/_admin.scss
@@ -6,7 +6,8 @@
   height: calc(100% - #{$navbar-height} - #{$content-padding});
   min-height: 0;
   margin: 0 $content-padding;
-  background: linear-gradient(180deg, $primary-background-color 0%, rgba($primary-background-color, 0.8) 100%), $primary-background-color;
+  background: linear-gradient(180deg, $primary-background-color 0%, rgba($primary-background-color, 0.8) 100%),
+    $primary-background-color;
 }
 
 // Tabs Styles
@@ -23,7 +24,7 @@
     bottom: 0;
     left: $content-padding;
     border-bottom: $tab-border solid $button-font-color;
-    content: '';
+    content: "";
   }
 }
 
@@ -64,14 +65,21 @@
   }
 }
 
-.user-application, .package-request {
+.admin-header-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: $header-padding;
+}
+
+%content-tabs {
   @include flex-center(space-between);
 
-  height: 4.8125rem;
+  position: relative;
   margin: 0 $content-padding $content-padding $content-padding;
   background: rgb(255 255 255 / 60%);
   border-radius: 0.75rem;
-  cursor: pointer; 
+  cursor: pointer;
 
   &.active {
     background-color: $background-color;
@@ -82,20 +90,108 @@
     background-color: lighten($primary-background-color, 10%);
   }
 
-  .user-info,  .package-info{
+  &::after {
+    position: absolute;
+    top: 50%;
+    right: 1.25rem;
+    width: 1.5rem;
+    height: 1.5rem;
+    background: url("../img/arrow_right_alt.svg") no-repeat center;
+    background-size: contain;
+    transform: translateY(-50%);
+    content: "";
+  }
+}
+
+.user-application,
+.package-request {
+  @extend %content-tabs;
+
+  height: 4.8125rem;
+
+  .user-info,
+  .package-info {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     margin-left: 1.25rem;
   }
+}
 
-  .arrow {
-    width: 1.5rem;
-    height: 1.5rem;
-    margin-right: 1.25rem;
-    background: url('../img/arrow_right_alt.svg') no-repeat center;
-    background-size: contain;
+.user-management-table {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  min-height: 0;
+  overflow-y: auto;
+
+  thead,
+  tbody {
+    display: flex;
+    flex-wrap: wrap;
   }
+
+  thead tr {
+    display: grid;
+    flex: 0 0 100%;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    width: 100%;
+  }
+
+  th a {
+    position: relative;
+    display: flex;
+    padding: 1rem;
+    text-align: left;
+    text-decoration: none;
+
+    &::after {
+      width: 0.75rem;
+      height: 1.25rem;
+      margin-left: $content-padding;
+      background-image: url("../img/arrow_drop_down_purple.svg");
+      background-size: 100% 100%;
+      content: "";
+    }
+  }
+
+  th:first-child {
+    margin-right: -0.35rem;
+    margin-left: $content-padding;
+  }
+
+  th:nth-child(2) {
+    margin-left: 0.35rem;
+  }
+
+  th:nth-child(3) {
+    margin-right: 0.35rem;
+  }
+
+  th:last-child {
+    margin-right: $content-padding;
+    margin-left: -0.35rem;
+  }
+
+  .table-row {
+    @extend %content-tabs;
+
+    width: 100%;
+  }
+
+  .table-cell {
+    flex: 1;
+    padding: 1rem;
+    text-align: left;
+    word-wrap: break-word;
+  }
+}
+
+.table-body {
+  @extend %scrollbar;
+
+  min-height: 0;
+  overflow-y: auto;
 }
 
 #admin-content .admin-header {
@@ -147,7 +243,8 @@
   gap: 10px;
 }
 
-#package-no-content-selected, #user-no-content-selected  {
+#package-no-content-selected,
+#user-no-content-selected {
   display: flex;
   flex: 3.5;
   align-items: center;
