--- a/src/views/partials/admin/tab-user-applications.ejs
+++ b/src/views/partials/admin/tab-user-applications.ejs
@@ -1,4 +1,6 @@
 <div class="tab-pane" id="pane1">
-    <div class="admin-header">User Applications</div>
-    <%- include('item-section.ejs', {type: 'user'}); %>
+    <div class="admin-header-container">
+        <div class="admin-header">User Applications</div>
+    </div>
+    <%- include('item-section.ejs', {type: 'user' }); %>
 </div>
