add appllication and request counts to tab

--- a/src/views/admin.ejs
+++ b/src/views/admin.ejs
@@ -11,8 +11,8 @@
 
   <div id="admin-content">
     <div class="tabs">
-      <div class="tab" id="tab-user-application" data-tab="user">User Applications</div>
-      <div class="tab" id="tab-package-request" data-tab="package">Package Requests</div>
+      <div class="tab" id="tab-user-application" data-tab="user">User Applications (<%= userRequests.length %>)</div>
+      <div class="tab" id="tab-package-request" data-tab="package">Package Requests (<%= packageRequests.length %>)</div>
       <div class="tab" id="tab-user-management">User Management</div>
     </div>
     <div class="tab-content">
