--- a/src/views/partials/admin/user-management.ejs
+++ b/src/views/partials/admin/user-management.ejs
@@ -1,4 +1,4 @@
-<table id="userTable" class="user-management-table">
+<table id="user-table" class="table">
   <thead>
     <tr>
       <th><a href="#" class="light-text">Name</a></th>
