--- a/src/views/login.html
+++ b/src/views/login.html
@@ -8,6 +8,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <script src="https://accounts.google.com/gsi/client" async></script>
 </head>
 <body>
     <div class="login-page-wrapper">
@@ -42,7 +43,7 @@
                     <div id="sign-in-btn" class="large-button">Sign In</div>
                     <hr class="or-google-divider">
                     </hr>
-                    <div class="google-sign-in-btn"><img style="margin-right: 10px;" src="img/google_icon.svg"></i> Sign in with Google</div>
+                    <div id="google-sign-in-div" class="google-sign-in-btn"></div>
                 </div>
             </div>
             <div class="half-container fill"><img src="img/eye_candy.png"></div>
@@ -50,4 +51,6 @@
     </div>
 </body>
 </html>
+
 <script src="js/login-script.js"></script>
+
