--- a/src/public/css/main.scss
+++ b/src/public/css/main.scss
@@ -11,6 +11,7 @@
 @import "components/input";
 @import "components/scrollbar";
 @import "components/table";
+@import "components/tabs";
 @import "components/text";
 
 // Import page-specific styles
