--- a/src/public/css/partials/_variables.scss
+++ b/src/public/css/partials/_variables.scss
@@ -82,3 +82,8 @@ $button-visibility-color: #926296;
 
 // Hr
 $hr-height: 0.0625rem;
+
+// Input
+$input-border-radius: 0.75rem;
+$input-letter-spacing: -0.017rem;
+$input-width: 15.25rem;
