add history page content and style

--- a/src/public/css/main.scss
+++ b/src/public/css/main.scss
@@ -18,6 +18,7 @@
 @import "pages/login";
 @import "pages/analyze";
 @import "pages/admin";
+@import "pages/history";
 
 // This file should contain all global CSS
 
