--- a/src/views/partials/admin/user-management.ejs
+++ b/src/views/partials/admin/user-management.ejs
@@ -1,13 +1,11 @@
 <table id="user-table" class="table">
-  <thead>
-    <tr>
+  <tbody class="table-body">
+    <tr class="table-header">
       <th><a href="#" class="light-text">Name</a></th>
       <th><a href="#" class="light-text">Email</a></th>
       <th><a href="#" class="light-text">Last login</a></th>
       <th><a href="#" class="light-text">Role</a></th>
     </tr>
-  </thead>
-  <tbody class="table-body">
     <% users.forEach(user => { %>
       <tr class="table-row">
         <td class="table-cell">
