--- a/src/views/history.ejs
+++ b/src/views/history.ejs
@@ -1,1 +1,65 @@
-hello!
+<!DOCTYPE html>
+<html>
+
+<head>
+    <title>History</title>
+    <link rel="stylesheet" href="css/main.css" />
+</head>
+
+<body>
+    <!-- creates a date in the format of YYYY/MM/dd - hh:mm AM/PM -->
+    <% const formatDate=(date)=> {
+        if (!date) return 'N/A';
+        const options = { year: 'numeric', month: '2-digit', day: '2-digit' };
+        const dateString = date.toLocaleDateString('en-US', options);
+
+        const hour = date.getHours();
+        const minute = date.getMinutes();
+        const ampm = hour >= 12 ? 'PM' : 'AM';
+        const formattedHour = hour % 12 === 0 ? 12 : hour % 12;
+        const timeString = `${formattedHour}:${minute.toString().padStart(2, '0')} ${ampm}`;
+
+        return `${dateString} - ${timeString}`;
+        }; %>
+
+        <%- include('partials/navbar.ejs', { page: 'history' , username: 'John Doe' }); %>
+            <div id="history-content">
+                <div class="history-header-container">
+                    <div class="history-header">Script history</div>
+                    <div class="search-inputs">
+                        <div class="search-input-container">
+                            <input type="text" class="search-input" id="history-date-from-search"
+                                placeholder="Date from">
+                        </div>
+                        <div class="search-input-container">
+                            <input type="text" class="search-input" id="history-date-to-search" placeholder="Date to">
+                        </div>
+                        <div class="search-input-container">
+                            <input type="text" class="search-input" id="history-search-from" placeholder="Search from">
+                        </div>
+                    </div>
+                </div>
+                <table id="history-table" class="table">
+                    <tbody class="table-body">
+                        <tr class="table-header">
+                            <th><a href="#" class="light-text">Date</a></th>
+                            <th><a href="#" class="light-text">Ran by</a></th>
+                        </tr>
+                        <% logs.forEach(log=> { %>
+                            <tr class="table-row">
+                                <td class="table-cell light-text">
+                                    <%= formatDate(log.create_time) %>
+                                </td>
+                                <td class="table-cell">
+                                    <%= log.userFullName %>
+                                </td>
+                            </tr>
+                            <% }) %>
+                    </tbody>
+                </table>
+            </div>
+
+            <script src="js/history-script.js"></script>
+</body>
+
+</html>
