--- a/src/public/css/components/_tabs.scss
+++ b/src/public/css/components/_tabs.scss
@@ -17,7 +17,10 @@
   }
   
   .tab {
-    @include tab-style;
+    align-items: center;
+    padding: $content-padding $tab-content-padding;
+    color: $secondary-font-color;
+    border-radius: 0.75rem 0.75rem 0 0;
   
     &:hover {
       cursor: pointer;
@@ -64,16 +67,14 @@
 // Tab Content
 .tab-content {
     @extend %scrollbar;
-  
-    display: flex;
-    flex-direction: column;
+    @include flex-direction;
+
     flex-grow: 1;
-    overflow-y: auto;
   }
   
   .tab-pane {
-    display: flex;
-    flex-direction: column;
+    @include flex-direction;
+
     height: 0;
     overflow: hidden;
     visibility: hidden;
