--- a/src/public/css/pages/_admin.scss
+++ b/src/public/css/pages/_admin.scss
@@ -1,4 +1,4 @@
-// Admin Content
+// Admin page-specific styles
 #admin-content {
   @include content-container;
 }
@@ -15,8 +15,8 @@
 
   .user-info,
   .package-info {
-    display: flex;
-    flex-direction: column;
+    @include flex-direction;
+
     align-items: flex-start;
     margin-left: 1.25rem;
   }
@@ -30,8 +30,8 @@
 
 // User Section
 #admin-content .item-section {
-  display: flex;
-  flex-direction: row;
+  @include flex-direction($direction: row);
+
   flex-grow: 1;
   overflow: hidden;
 }
@@ -42,15 +42,11 @@
   flex: 0.8;
   height: 100%;
   min-height: 0;
-  overflow-y: auto;
 }
 
 // User Content
 #admin-content .content-header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: $content-padding 0;
+  @include header-container;
 }
 
 .item-content {
@@ -59,8 +55,7 @@
   flex: 3.5;
   min-height: 0;
   margin: 0 $content-padding $content-padding $content-padding;
-  padding: $content-outline-padding;
-  overflow-y: auto;
+  padding: $content-outline-padding;  
   background: $background-color;
   border: 2px solid transparent;
   border-radius: 0.75rem;
@@ -71,28 +66,25 @@
   gap: 10px;
 }
 
-#package-no-content-selected,
-#user-no-content-selected {
-  display: flex;
+.no-content-selected {
+  @include flex-center;
+  @include content-overflow;
+  
   flex: 3.5;
-  align-items: center;
-  justify-content: center;
   min-height: 0;
   margin: 0 $content-padding $content-padding $content-padding;
   padding: 20px;
-  overflow-y: auto;
   text-align: center;
   background-color: $primary-background-color;
   border: 2px solid $background-color;
   border-radius: 0.75rem;
 }
 
-// image
+// Image
 .image-container {
+  @include flex-center;
+
   position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   width: 37.5rem;
   height: 25rem;
   padding-top: 2.5rem;
