--- a/src/public/css/partials/_mixin.scss
+++ b/src/public/css/partials/_mixin.scss
@@ -5,17 +5,15 @@
   justify-content: $justify;
 }
 
+@mixin flex-direction($direction: column) {
+  display: flex;
+  flex-direction: $direction;
+}
+
 @mixin font-style($weight: $standard-font-weight, $size: $standard-font-size, $family: $main-font) {
   font-weight: $weight;
   font-size: $size;
   font-family: $family;
-}
-
-@mixin tab-style {
-  align-items: center;
-  padding: $content-padding $tab-content-padding;
-  color: $secondary-font-color;
-  border-radius: 0.75rem 0.75rem 0 0;
 }
 
 @mixin svg-icon($width, $height) {
@@ -50,8 +48,8 @@
 }
 
 @mixin content-container {
-  display: flex;
-  flex-direction: column;
+  @include flex-direction($direction: column);
+
   height: calc(100% - #{$navbar-height} - #{$content-padding});
   min-height: 0;
   margin: 0 $content-padding;
@@ -60,8 +58,11 @@
 }
 
 @mixin header-container {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+  @include flex-center($justify: space-between);
+  
   padding: $content-padding 0;
+}
+
+@mixin content-overflow {
+  overflow-y: auto;
 }
