--- a/src/public/css/components/_table.scss
+++ b/src/public/css/components/_table.scss
@@ -40,7 +40,7 @@
 
     tr {
         display: grid;
-        grid-template-columns: $tab-grid-template-columns
+        grid-template-columns: $tab-grid-template-columns;
     }
 
     th a,
