--- a/src/public/css/pages/_login.scss
+++ b/src/public/css/pages/_login.scss
@@ -116,7 +116,7 @@
     padding: 0 1rem;
     color: $secondary-font-color;
     background: $background-color;
-    content: 'Or';
+    content: "Or";
   }
 }
 
