--- a/src/public/css/partials/_variables.scss
+++ b/src/public/css/partials/_variables.scss
@@ -1,8 +1,8 @@
 // Reused variables throughout the CSS
 
 // Fonts
-$main-font: 'Inter', sans-serif;
-$script-font: 'Courier New', monospace;
+$main-font: "Inter", sans-serif;
+$script-font: "Courier New", monospace;
 
 // Font sizes
 $standard-font-size: 0.95rem;
