--- a/src/public/css/components/_buttons.scss
+++ b/src/public/css/components/_buttons.scss
@@ -26,7 +26,7 @@
     height: 100%;
     background: linear-gradient(89deg, $gradient-color-start 0%, $gradient-color-mid 50%, $gradient-color-end 100%);
     box-shadow: $btn-shadow;
-    content: '';
+    content: "";
   }
 
   &:hover::before {
@@ -64,15 +64,28 @@
 }
 
 .approve-button {
-  @include svg-icon-button($button-approve-color, '../img/check_circle.svg', $hover-color: darken($button-approve-color, 10%));
+  @include svg-icon-button(
+    $button-approve-color,
+    "../img/check_circle.svg",
+    $hover-color: darken($button-approve-color, 10%)
+  );
 }
 
 .decline-button {
-  @include svg-icon-button($button-decline-color, '../img/cancel.svg', $hover-color: darken($button-decline-color, 10%));
+  @include svg-icon-button(
+    $button-decline-color,
+    "../img/cancel.svg",
+    $hover-color: darken($button-decline-color, 10%)
+  );
 }
 
 .unblur-button {
-  @include svg-icon-button($button-visibility-color, '../img/visibility.svg', $hover-color: darken($button-visibility-color, 10%), $height: 1rem);
+  @include svg-icon-button(
+    $button-visibility-color,
+    "../img/visibility.svg",
+    $hover-color: darken($button-visibility-color, 10%),
+    $height: 1rem
+  );
 
   position: absolute;
   top: 50%;
