make sort and search table script reusable

--- a/src/views/history.ejs
+++ b/src/views/history.ejs
@@ -58,7 +58,7 @@
                     </tbody>
                 </table>
             </div>
-
+            <script src="js/utilities/table-script.js"></script>
             <script src="js/history-script.js"></script>
 </body>
 
