--- a/src/views/admin.ejs
+++ b/src/views/admin.ejs
@@ -26,6 +26,7 @@
   <script type="module" src="js/admin/user-application.js"></script>
   <script type="module" src="js/admin/package-request.js"></script>
   <script src="js/admin/user-management.js"></script>
+  <script src="js/utilities/table-script.js"></script>
 </body>
 
 </html>
