create modal styles

--- a/src/public/css/main.scss
+++ b/src/public/css/main.scss
@@ -9,6 +9,7 @@
 @import "components/navbar";
 @import "components/buttons";
 @import "components/input";
+@import "components/modal";
 @import "components/scrollbar";
 @import "components/table";
 @import "components/tabs";
