seperate script box style from analyze page

--- a/src/public/css/main.scss
+++ b/src/public/css/main.scss
@@ -10,6 +10,7 @@
 @import "components/buttons";
 @import "components/input";
 @import "components/modal";
+@import "components/script";
 @import "components/scrollbar";
 @import "components/table";
 @import "components/tabs";
