--- a/src/public/css/partials/_variables.scss
+++ b/src/public/css/partials/_variables.scss
@@ -87,3 +87,6 @@ $hr-height: 0.0625rem;
 $input-border-radius: 0.75rem;
 $input-letter-spacing: -0.017rem;
 $input-width: 15.25rem;
+
+// Modal
+$modal-background-color: rgb(0 0 0 / 40%);
