--- a/src/public/css/components/_modal.scss
+++ b/src/public/css/components/_modal.scss
@@ -1,19 +1,17 @@
 #modal {
-    display: none;
+    @include flex-center;
+
     position: fixed;
-    z-index: 1; 
-    left: 0;
     top: 0;
-    width: 100%; 
-    height: 100%; 
-    overflow: auto; 
-    background-color: rgba(0,0,0,0.4);
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    left: 0;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: $modal-background-color;
 }
 
 #modal-content {
-    margin: calc(50vh - 50%) auto;
     width: 50%;
+    margin: calc(50vh - 50%) auto;
 }
