--- a/src/public/css/partials/_variables.scss
+++ b/src/public/css/partials/_variables.scss
@@ -78,6 +78,7 @@ $button-margin-top: 1.25rem;
 $button-svg-size: 1.0625rem;
 $button-approve-color: #26c7b4;
 $button-decline-color: #e5467f;
+$button-close-color: #947598;
 $button-visibility-color: #926296;
 
 // Hr
