--- a/src/views/partials/history/script-modal.ejs
+++ b/src/views/partials/history/script-modal.ejs
@@ -3,7 +3,7 @@
         <div class="script-content">
             <div id="modal-header" class="script-header">
                 <span id="modal-title"></span>
-                <button id="close-modal" class="decline-button">Close</button>
+                <button id="close-modal" class="close-button">Close</button>
             </div>
             <div class="editor">
                 <div class="line-numbers"></div>
