update login page

--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -17,33 +17,8 @@
             <div class="half-container">
                 <div class="left-container">
                     <img class="login-logo" src="img/full_logo.svg">
-                    <div class="welcome-back">Welcome back!</div>
-                    <div class="toggle-container">
-                        <div class="active sign-in-toggle">Sign In</div>
-                        <div class="sign-up-toggle">Sign Up</div>
-                    </div>
-                    <div class="input">
-                        <div class="input-before">
-                            <i class="bi-at" style="font-size: 1.5rem;"></i>
-                        </div>
-                        <div class="input-after">
-                            <!-- <div style="color: #7E6D80">Email</div> -->
-                            <input id="login-input-email" type="email" placeholder="Email" />
-                        </div>
-                    </div>
-                    <div class="input">
-                        <div class="input-before">
-                            <i class="bi-key" style="font-size: 1.5rem;"></i>
-                        </div>
-                        <div class="input-after">
-                            <!-- <div style="color: #7E6D80">Password</div> -->
-                            <input id="login-input-password" type="password" placeholder="Password" />
-                        </div>
-                    </div>
-                    <div id="sign-in-btn" class="large-button">Sign In</div>
-                    <hr class="or-google-divider">
-                    </hr>
-                    <div id="google-sign-in-div" class="google-sign-in-btn"></div>
+                    <div class="welcome-back">Welcome to Relabase!</div>
+                    <div id="google-sign-in-div""></div>
                 </div>
             </div>
             <div class="half-container fill"><img src="img/eye_candy.png"></div>
