--- a/src/views/partials/history/history-content.ejs
+++ b/src/views/partials/history/history-content.ejs
@@ -1,5 +1,5 @@
-<div class="history-header-container">
-    <div class="history-header">Script history</div>
+<div class="main-header-container">
+    <div class="main-header">Script history</div>
     <div class="search-inputs">
         <div class="search-input-container">
             <input type="text" class="search-input" id="history-date-from-search"
