--- a/src/views/partials/admin/content-header.ejs
+++ b/src/views/partials/admin/content-header.ejs
@@ -1,4 +1,4 @@
-<div class="content-header">
+<div class="main-header-container">
     <div class="large-header">
         <!-- set application/request name in js-->
     </div>
