--- a/src/public/css/pages/_analyze.scss
+++ b/src/public/css/pages/_analyze.scss
@@ -1,5 +1,5 @@
 // Analyze page-specific styles
-.content-wrapper {
+#script-wrapper {
   display: flex;
   flex: 1;
   gap: $tab-gap;
@@ -14,7 +14,10 @@
 }
 
 #results-iframe {
+  @extend %scrollbar;
+  
   width: 100%;
   height: 100%;
-  border: 0;
+  background: linear-gradient(180deg, $primary-background-color 0%, rgb(254 221 225 / 80%) 100%), $primary-background-color;
+  border: transparent;
 }
