fix script height issue
+ remove border from buttons

--- a/src/public/css/components/_buttons.scss
+++ b/src/public/css/components/_buttons.scss
@@ -16,7 +16,7 @@
   padding: $button-padding-y $button-padding-x;
   overflow: hidden;
   text-align: center;
-  border-color: transparent;
+  border: none;
   border-radius: $button-border-radius;
 
   &::before {
