--- a/src/public/css/components/_script.scss
+++ b/src/public/css/components/_script.scss
@@ -1,10 +1,12 @@
 // Script styles
 .script-content {
-  flex: 1;
+  display: flex;
+  flex-direction: column;
   background: linear-gradient(0deg, $primary-background-color 0%, $primary-background-color 100%),
     linear-gradient(180deg, $primary-background-color 0%, rgb(254 221 225 / 80%) 100%);
   box-sizing: border-box;
   height: 100%;
+  width: 100%;
 }
 
 .script-header {
@@ -16,7 +18,8 @@
 .editor {
   display: flex;
   width: 100%;
-  height: calc(100% - #{$navbar-height});
+  height: 100%;
+  overflow-y: auto;
 }
 
 .line-numbers {
