add register scss and js files, update register.ejs

--- a/src/public/css/main.scss
+++ b/src/public/css/main.scss
@@ -21,6 +21,7 @@
 @import "pages/analyze";
 @import "pages/admin";
 @import "pages/history";
+@import "pages/register";
 
 // This file should contain all global CSS
 
