--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -1,13 +1,28 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-  <title>Register</title>
-  <link rel="stylesheet" href="css/main.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <script src="https://accounts.google.com/gsi/client" async></script>
 </head>
-
 <body>
-    register
+    <div class="login-page-wrapper">
+        <div
+            style="display: flex; width: 100%; height: 100%; flex-direction: row; align-items: center; justify-content: center;">
+            <div class="half-container">
+                <div class="left-container">
+                    <img class="login-logo" src="img/full_logo.svg">
+                    <div class="register-title-text">Let's get you started!</div>
+                  
+                </div>
+            </div>
+            <div class="half-container fill"><img src="img/eye_candy.png"></div>
+        </div>
+    </div>
 </body>
-
 </html>
+
+<script src="js/register-script.js"></script>
+
