--- a/src/views/partials/navbar.ejs
+++ b/src/views/partials/navbar.ejs
@@ -15,4 +15,10 @@
     </div>
     <img class="down-arrow-icon" src="img/arrow_drop_down.svg" />
   </div>
+  <div id="dropdown-content" class="dropdown-content">
+    <a href="/profile">Profile</a>
+    <a href="/logout">Logout</a>
+  </div>
 </div>
+
+<script src="js/utilities/navbar-script.js"></script>
