add log out function

--- a/src/views/partials/navbar.ejs
+++ b/src/views/partials/navbar.ejs
@@ -17,7 +17,7 @@
   </div>
 
   <div id="dropdown-content" class="dropdown-content">
-    <a href="/signout">Sign out</a>
+    <a id="log-out-button">Log out</a>
   </div>
 </div>
 
